tests/NormalTests/paczka1/fuzzy1/18349915.err
Error in line 2: i2x9vD A726 50,2
Error in line 12: mrYzH A726 80,7
Error in line 15: 6eEwQVE8 A70 93,2
Error in line 18: i2x9vD A70 22,7
Error in line 29: 6eEwQVE8 S853 75,9
Error in line 31: 6eEwQVE8 A726 41,5
Error in line 34: A70 S853 40,15
